GRAMMAR.ebnf
(* Runfile .run — grammar v0 *)

file        = { line } ;
line        = blank | property | exec_block | shell | ( WS , statement , eol ) ;

blank       = WS , [ comment ] , NEWLINE ;
(* Every line this language reads ends this way. `shell` is the exception: the
   text after `$ ` is the shell's, `#` and all, and no lexer of this language
   can quote-scan another's. An `exec` *command* does end this way, because the
   runner reads that line itself -- it splits it into words and spawns the
   program -- while the body below it does not. *)
eol         = [ comment ] , NEWLINE ;
(* A `#` opens a comment only where it begins a *word*: at the start of a line,
   or after a blank. That is a rule about the character before it, so the lexer
   states it and this grammar cannot. It is the shell's own rule, which is what
   makes one sentence true on both sides of the marker: `a#b` is one word in
   either half. A `#` inside a string or a `{{ … }}` is text -- the only way to
   write a word that does begin with one. *)
comment     = "#" , { ANY - NEWLINE } ;

(* ---- properties ---- *)
property    = WS , "." , ident , { "." , ident } , [ WS , "=" , WS , expr ] , eol ;
(* A property may be written anywhere in a block and is applied where it sits, so it reads the bindings above
   it. Which names may sit below the block's first statement is a rule about the name rather than the shape:
   `.shell`, `.logging`, `.watch` and `.only-in-directories` describe the whole file and are refused there.
   `PROPERTIES` in runfile-runtime is the list. *)

(* ---- shell ---- *)
shell       = WS , [ "detach" , " " ] , "$" , " " , shell_text , NEWLINE ;  (* no comment: all of it is the shell's *)
(* `detach` starts the command and does not wait. It marks one command: a `detach $` line is its own
   statement, where contiguous plain `$` lines are folded into a single process. It is a marker only in
   front of `$` and `exec`, so `detach = 5` is an ordinary reassignment, and `detach run` is refused --
   a dispatch happens in this process and has none to detach. *)
shell_text  = { ANY - NEWLINE | "\" , NEWLINE } ;          (* backslash continues *)

exec_block  = WS , [ "detach" , " " ] , "exec" , " " , cmd_text , eol ,
              { ANY - ( WS , "end" , eol ) } ,
              WS , "end" , eol ;
(* The words of a command line, which is how the runner splits it -- so a `#`
   beginning one of them is a comment here, unlike in `shell_text`. *)
cmd_text    = cmd_word , { WS , cmd_word } ;
cmd_word    = ( ANY - WS - NEWLINE - "#" | interp ) , { ANY - WS - NEWLINE | interp } ;

(* ---- statements ---- *)
statement   = let | assign | if | else | for | while | until | loop
            | break | continue | match | case | default
            | run | retry | do | end | call ;

let         = "let" , names , "=" , value ;
assign      = names , "=" , value ;
(* One name binds the value whole; several unpack a list positionally, and a
   name with nothing to bind is an error. `_` is a position matched and thrown
   away, and may be repeated -- it is not an ident, so it shadows nothing. *)
names       = ( ident | "_" ) , { "," , ( ident | "_" ) } ;
if          = "if" , ( expr | capture ) ;                   (* `if $ cmd` is true when it succeeds *)
else        = "else" , [ "if" , ( expr | capture ) ] ;      (* a chain of them is one block, closed by one `end` *)
for         = [ "parallel" ] , "for" , names , "in" , ( expr | capture ) ;
while       = "while" , ( expr | capture ) ;                (* again while it holds *)
until       = "until" , ( expr | capture ) ;                (* again while it does not *)
loop        = "loop" ;                                      (* again forever; `break` is how it ends *)
(* Refused outside a `for`, `while`, `until` or `loop` -- a rule about where a
   line sits rather than about its shape, so the parser states it and this
   grammar cannot. *)
break       = "break" ;
continue    = "continue" ;
match       = "match" , ( expr | capture ) ;                (* over a capture, the cases are exit codes *)
case        = "case" , string ;                             (* a label is a value, so it is quoted *)
default     = "default" ;
retry       = "retry" , number , [ "every" , number ] ;
do          = [ "parallel" ] , "do" ;                       (* opens a block, so a property has somewhere to go *)
(* `parallel do` makes each statement directly inside it a branch, and `parallel for` each iteration; the
   branches run at once. `parallel` is a marker only in front of `do` and `for`, so `parallel = 5` is an
   ordinary reassignment. What the parser refuses inside one is a rule about where a line sits, which this
   grammar cannot state: a `let` directly inside `parallel do`, assigning a name the branch did not bind,
   `break` or `continue` reaching a loop outside the block, and `break` ending a `parallel for`. Each `$`
   line directly inside `parallel do` is its own branch rather than folded into the next. *)
end         = "end" ;
run         = "run" , target_ref , { WS , arg_word } ;
call        = postfix | capture_call ;                      (* bare call, e.g. decrypt(a,b) *)

target_ref  = { ident_char | ":" | interp } ;
arg_word    = { ANY - WS - NEWLINE | interp } ;

(* ---- values ---- *)
(* A capture or a structured block stands where a value is wanted. Each ends at
   a boundary a line-oriented grammar cannot state: a `$` capture at the
   newline, an `exec` or structured body at an `end` at its *opener's*
   indentation. *)
value       = expr | capture | structured | capture_call ;
capture     = "$" , " " , shell_text
            | "exec" , " " , cmd_text , eol , exec_body , WS , "end" ;
structured  = struct_kw , eol , exec_body , WS , "end" ;
struct_kw   = "json" ;
exec_body   = { ANY - ( WS , "end" , eol ) } ;              (* a `#` in a body is that language's *)

(* A call whose last argument is a `$` run: the capture reaches the `)`, which
   has to be the last character of the line. `code_of` is the one call that may
   take a `run` dispatch instead — a dispatched target reports a status, not
   output, so a status is the only value it has to give. *)
capture_call = ident , "(" , { expr , "," } , ( "$" , " " , shell_text | dispatch ) , ")" ;
dispatch    = "run" , target_ref , { WS , arg_word } ;

(* ---- expressions ---- *)
expr        = chain ;
chain       = or , { "?" , or } ;                           (* fallback *)
or          = and , { "||" , and } ;
and         = cmp , { "&&" , cmp } ;
cmp         = add , { ( "==" | "!=" | "<" | "<=" | ">" | ">=" ) , add } ;
add         = mul , { ( "+" | "-" ) , mul } ;
mul         = unary , { ( "*" | "/" | "%" ) , unary } ;
unary       = [ "!" | "-" ] , postfix ;
postfix     = primary , { "[" , expr , "]" | "(" , [ arglist ] , ")" } ;
arglist     = expr , { "," , expr } , [ "," ] ;
primary     = number | string | rawstring | bool | list | source | ident
            | "(" , expr , ")" ;

list        = "[" , [ expr , { "," , expr } , [ "," ] ] , "]" ;   (* may span lines; an element is any expr, so lists nest *)
source      = ( "ARG" | "ENV" | "FLAG" | "RUN" ) , "." , ident | "ARGS" ;
bool        = "true" | "false" ;
number      = digit , { digit } , [ "." , digit , { digit } ] ;
string      = '"' , { str_char | interp } , '"' ;
rawstring   = 'r"' , { ANY - '"' | interp } , '"' ;
str_char    = ( ANY - '"' - "\" ) | "\" , ( '"' | "\" | "n" | "t" | "r" | "e" ) ;   (* `\e` is ESC *)
interp      = "{{" , WS , expr , WS , "}}" ;
ident       = letter , { letter | digit | "_" | "-" } ;
