crates/runfile-lang/src/parser.rs
//! Line classification, block assembly and expression parsing.

use crate::ast::*;
use crate::lexer::{self, LexError, RawPart, Spanned, Token};
use crate::span::Span;
use std::collections::BTreeSet;
use thiserror::Error;

#[derive(Debug, Error, Clone, PartialEq)]
pub enum ParseError {
	#[error(transparent)]
	Lex(#[from] LexError),
	#[error("line {line}: {msg}")]
	At { line: usize, msg: String },
}

fn err<T>(line: usize, msg: impl Into<String>) -> Result<T, ParseError> {
	Err(ParseError::At { line, msg: msg.into() })
}

/// `let` and reassignment both bind a name, and both used to take whatever text
/// preceded the `=` -- including nothing at all.
fn check_binding_name(name: &str, line: usize) -> Result<(), ParseError> {
	if name.is_empty() {
		return err(line, "binding has no name");
	}
	let ok = name.chars().next().is_some_and(|c| c.is_ascii_alphabetic() || c == '_')
		&& name.chars().all(|c| c.is_ascii_alphanumeric() || c == '_' || c == '-');
	if !ok {
		return err(line, format!("`{name}` is not a valid name"));
	}
	Ok(())
}

/// The names on the left of a `let`, a reassignment or a `for`.
///
/// One name is an ordinary binding; several unpack a list positionally. `_` is
/// a position matched and thrown away, and may be written as often as it is
/// useful -- it is not a name (an identifier starts with a letter or a letter
/// after `_`), so it cannot shadow one and two of them cannot collide.
fn binding_names(text: &str, line: usize) -> Result<Vec<String>, ParseError> {
	let names: Vec<String> = text.split(',').map(|n| n.trim().to_string()).collect();
	for n in &names {
		if n != "_" {
			check_binding_name(n, line)?;
		}
	}
	Ok(names)
}

/// One binding name, or several separated by commas.
///
/// The cheap form of [`binding_names`], for deciding whether a line is a
/// reassignment at all before committing to reading one.
fn is_name_list(text: &str) -> bool {
	!text.is_empty() && text.split(',').all(|n| is_name(n.trim()))
}

fn is_name(n: &str) -> bool {
	n == "_"
		|| (!n.is_empty()
			&& n.chars().next().is_some_and(|c| c.is_ascii_alphabetic() || c == '_')
			&& n.chars().all(|c| c.is_ascii_alphanumeric() || c == '_' || c == '-'))
}

/// A condition or an iterable: either an expression or a `$` run, whose exit
/// status is the answer.
fn condition(text: &str, at: usize, no: usize) -> Result<Expr, ParseError> {
	match shell_capture(text, at, no)? {
		Some(e) => Ok(e),
		None => parse_expr(text, at, no),
	}
}

/// `rest` with `word` and the whitespace after it removed, when that is how it
/// begins. `else ifx` is not an `else if`.
fn after_keyword<'a>(rest: &'a str, word: &str) -> Option<&'a str> {
	let tail = rest.strip_prefix(word)?;
	if tail.is_empty() {
		return Some(tail);
	}
	tail.starts_with(char::is_whitespace).then(|| tail.trim_start())
}

/// Where `part` starts in the source, given where `whole` does.
///
/// `part` is a slice of `whole` -- a `trim` of it, a `strip_prefix`, a range --
/// which is what every piece of a line the parser reads is. Asked of the
/// pointers rather than worked out from lengths, since a length cannot say how
/// many blanks a `trim` took off the front: that miscount is how a name used to
/// be placed a column or three before itself.
fn offset_in(whole: &str, at: usize, part: &str) -> usize {
	let (w, p) = (whole.as_ptr() as usize, part.as_ptr() as usize);
	if p < w || p > w + whole.len() {
		return at;
	}
	at + (p - w)
}

/// The text of a statement, gathered by [`P::logical`], and where it came from.
struct Logical {
	text: String,
	/// Where `text` starts in the source: its first byte of code, past the
	/// indentation. An offset into `text` plus this is an offset into the file.
	at: usize,
	/// Where its first line starts, indentation included, which is where the
	/// statement's own span starts.
	start: usize,
	no: usize,
}

/// Whether this raw line is the `end` that closes a body opened at `indent`.
///
/// The indentation has to match the *opener's* exactly, which is what lets a
/// body carry an `end` of its own (ruby, lua) without closing the block early.
/// The `end` line itself is this language's rather than the body's, so it takes
/// a comment like any other -- and this is the one place that has to be said
/// more than once, since the formatter finds the closer by the same rule and
/// the two disagreeing would let it move a line out of a body. The language
/// server asks it too, to find a body in a document that does not parse.
pub fn closes_body(raw: &str, indent: &str) -> bool {
	let Some(rest) = raw.strip_prefix(indent) else {
		return false;
	};
	!rest.starts_with([' ', '\t']) && lexer::code(rest.trim_end()) == "end"
}

/// One physical line, pre-classified.
struct Line<'a> {
	raw: &'a str,
	trimmed: &'a str,
	indent: &'a str,
	offset: usize,
	no: usize,
}

fn scan_lines(src: &str) -> Vec<Line<'_>> {
	let mut out = Vec::new();
	let mut offset = 0usize;
	for (i, full) in src.split('\n').enumerate() {
		// A CRLF file must parse as its LF twin: the carriage return is line
		// ending, not content. Left in, it reached exec bodies as text and made
		// an indented `end` compare unequal to its opener's indentation, so the
		// block never closed. Offsets still count it, since they index `src`.
		let raw = full.strip_suffix('\r').unwrap_or(full);
		let trimmed = raw.trim();
		let indent = &raw[..raw.len() - raw.trim_start().len()];
		out.push(Line {
			raw,
			trimmed,
			indent,
			offset,
			no: i + 1,
		});
		offset += full.len() + 1;
	}
	out
}

pub fn parse(src: &str) -> Result<Target, ParseError> {
	let lines = scan_lines(src);
	let mut p = P {
		lines: &lines,
		i: 0,
		depth: 0,
		loops: 0,
		unfold_next: false,
		branch: None,
		fence: None,
	};
	let description = p.take_description();
	let body = p.block(None)?;
	if p.i < p.lines.len() {
		let l = &p.lines[p.i];
		return err(l.no, format!("unexpected `{}`", l.trimmed));
	}
	Ok(Target { description, body })
}

/// How deeply blocks and expressions may nest before the parser gives up with a
/// clean error rather than recursing until the stack guard page aborts the whole
/// process (audit SA-022). Recursive descent is several frames per level -- a
/// whole precedence climb for an expression, `statement`'s large frame for a
/// block -- and a stack overflow is an uncatchable `abort`, so the bound is kept
/// well inside the smallest stack this parse ever runs on (a 2 MB worker thread,
/// as in the test harness), not just the 8 MB main thread. This parse runs with
/// no intent to execute -- `run :list`, Tab completion, `--help`, `:lint`, every
/// language-server edit -- so a crafted file must not crash them. Far above any
/// hand-written file: the author's corpus nests only a handful deep.
const MAX_DEPTH: usize = 128;

struct P<'a> {
	lines: &'a [Line<'a>],
	i: usize,
	/// Block-nesting depth, so a file of thousands of nested `if`/`end` reports
	/// a syntax error instead of overflowing the stack (audit SA-022).
	depth: usize,
	/// How many loop bodies enclose the line being parsed.
	///
	/// `break` and `continue` are refused outside one *here* rather than at
	/// run time, so an editor underlines them: whether a line sits inside a
	/// loop is a question about the text, and a run that finds out has already
	/// done half the work.
	loops: usize,
	/// Set for the one statement being parsed directly inside a `parallel do`,
	/// where a `$` line is a branch of its own rather than the first of a run:
	/// folded, `$ lint` and `$ test` were one process, run one after the other,
	/// under a block that said they were not.
	unfold_next: bool,
	/// The names the parallel branch being parsed binds itself, when there is
	/// one. Every branch works on its own copy of the scope, so assigning a
	/// name bound outside it would be lost when the block ends -- which is
	/// refused here, where an editor can say so, rather than silently dropped.
	branch: Option<BTreeSet<String>>,
	/// The innermost parallel block, as the loop depth it opened at. `break`
	/// and `continue` cannot reach a loop outside it: its branches run at once,
	/// so there is no order for them to leave.
	fence: Option<Fence>,
}

/// Where a parallel block sits among the loops around it.
#[derive(Clone, Copy)]
struct Fence {
	/// `P.loops` when the block opened.
	loops: usize,
	/// `parallel for`, whose own iterations `continue` may end.
	iterates: bool,
}

impl<'a> P<'a> {
	/// The leading comment block. Marker lines an editor or linter owns are not
	/// part of the description.
	fn take_description(&mut self) -> Option<String> {
		while self.i < self.lines.len() && self.lines[self.i].trimmed.is_empty() {
			self.i += 1;
		}
		let mut out = Vec::new();
		while self.i < self.lines.len() {
			let t = self.lines[self.i].trimmed;
			let Some(rest) = t.strip_prefix('#') else { break };
			let rest = rest.trim();
			if !rest.starts_with("shellcheck") && !rest.starts_with("vim:") && !rest.starts_with("-*-") {
				out.push(rest.to_string());
			}
			self.i += 1;
		}
		while out.last().is_some_and(|l| l.is_empty()) {
			out.pop();
		}
		(!out.is_empty()).then(|| out.join("\n"))
	}

	fn at_block_end(&self, kw: Option<&str>) -> bool {
		if self.i >= self.lines.len() {
			return true;
		}
		let t = self.lines[self.i].trimmed;
		if kw.is_none() {
			return false;
		}
		let head = t.split_whitespace().next().unwrap_or("");
		matches!(head, "end" | "else" | "case" | "default")
	}

	/// Parse statements until the block's terminator. `kw` is `None` at file level.
	fn block(&mut self, kw: Option<&str>) -> Result<Block, ParseError> {
		self.block_of(kw, false)
	}

	/// A block, whose statements are each a branch of their own when it is the
	/// body of a `parallel do`.
	fn block_of(&mut self, kw: Option<&str>, branches: bool) -> Result<Block, ParseError> {
		// One frame per nested block; past the bound, a clean error rather than a
		// stack-overflow abort (audit SA-022). Decremented on the success return
		// so sibling blocks do not accumulate; an error aborts the whole parse,
		// so leaving `depth` raised there is harmless.
		self.depth += 1;
		if self.depth > MAX_DEPTH {
			let line = self.lines.get(self.i).map_or(0, |l| l.no);
			return err(line, "blocks nested too deeply");
		}
		let mut b = Block::default();
		loop {
			while self.i < self.lines.len() {
				let t = self.lines[self.i].trimmed;
				if t.is_empty() || t.starts_with('#') {
					self.i += 1;
				} else {
					break;
				}
			}
			if self.at_block_end(kw) {
				self.depth -= 1;
				return Ok(b);
			}
			let line = &self.lines[self.i];
			// At file level `at_block_end` says no, so a closer would otherwise
			// fall through and parse as an expression statement -- deferring a
			// plain typo to a confusing "not defined" at run time.
			if kw.is_none() {
				let head = line.trimmed.split_whitespace().next().unwrap_or("");
				if matches!(head, "end" | "else" | "case" | "default") {
					return err(line.no, format!("`{head}` closes a block, but none is open"));
				}
			}
			if line.trimmed.starts_with('.') {
				b.properties.push(self.property()?);
			} else {
				let mut st = if branches {
					self.branch_statement()?
				} else {
					self.statement()?
				};
				// Whatever the statement read, the last line of it is the one
				// before where parsing resumes: a block's `end`, a spilled list's
				// `]`, a run's last `$` line.
				let last = &self.lines[self.i - 1];
				st.span_mut().end = last.offset + last.raw.len();
				b.statements.push(st);
			}
		}
	}

	fn property(&mut self) -> Result<Property, ParseError> {
		let line = &self.lines[self.i];
		self.i += 1;
		// A property is one physical line -- it never spills the way a list
		// does -- so it takes its comment off itself rather than through
		// `logical`. `t` is still a slice of `raw`, which the offsets index.
		let t = lexer::code(line.trimmed);
		let (name, rest) = match t.find('=') {
			Some(k) => (t[1..k].trim(), Some(t[k + 1..].trim())),
			None => (t[1..].trim(), None),
		};
		if name.is_empty() {
			return err(line.no, "property has no name");
		}
		let path: Vec<String> = name.split('.').map(str::to_string).collect();
		let value = match rest {
			None => None,
			Some(r) => {
				let base = line.offset + (r.as_ptr() as usize - line.raw.as_ptr() as usize);
				Some(parse_expr(r, base, line.no)?)
			}
		};
		Ok(Property {
			path,
			value,
			span: Span::new(line.offset, line.offset + t.len(), line.no),
		})
	}

	/// Gather a logical line, continuing while `[` are unbalanced so a list may
	/// span lines -- and nest, since the count is what says where it ends.
	///
	/// Each *physical* line loses its comment before it is joined, which is
	/// what lets one sit beside an element of a spilled list, or on a line of
	/// its own between two of them.
	///
	/// What sits between two lines' code -- the first one's comment, its line
	/// ending, the next one's indentation -- is joined as blanks of the same
	/// length, with the newline kept. So every byte of the text is at its own
	/// offset from [`Logical::at`], and every token after a newline is on its
	/// own line: a name on the third line of a list is reported on the third
	/// line, and underlined where it is. Joined with one space, as this was,
	/// both were placed by the first line.
	fn logical(&mut self) -> Logical {
		let lines = self.lines;
		let first = &lines[self.i];
		let code = lexer::code(first.trimmed);
		let at = first.offset + first.indent.len();
		let mut text = code.to_string();
		// Just past the last byte of code joined so far, in the source.
		let mut end = at + code.len();
		self.i += 1;
		// Running bracket depth, updated per appended line rather than by
		// re-tokenising all of `text` every pass -- O(N) instead of O(N^2) for a
		// list spilled over N lines (audit SA-024). A line that does not tokenise
		// alone has no reliable per-line delta, so there the whole accumulated
		// text is counted, exactly as before.
		let mut depth = lexer::line_delta(code, first.no).unwrap_or_else(|| lexer::brackets(&text, first.no).0);
		while depth > 0 && self.i < lines.len() {
			let (prev, line) = (&lines[self.i - 1], &lines[self.i]);
			let prev_end = prev.offset + prev.raw.len();
			// A `\r\n` is two bytes and one line ending, so its `\r` is a blank.
			text.extend(std::iter::repeat_n(
				' ',
				(prev_end - end) + (line.offset - prev_end - 1),
			));
			text.push('\n');
			text.extend(std::iter::repeat_n(' ', line.indent.len()));
			let code = lexer::code(line.trimmed);
			text.push_str(code);
			end = line.offset + line.indent.len() + code.len();
			self.i += 1;
			depth = match lexer::line_delta(code, line.no) {
				Some(d) => depth + d,
				None => lexer::brackets(&text, line.no).0,
			};
		}
		Logical {
			text,
			at,
			start: first.offset,
			no: first.no,
		}
	}

	fn statement(&mut self) -> Result<Statement, ParseError> {
		// Taken here, so it applies to this statement and to nothing nested in it.
		let unfold = std::mem::take(&mut self.unfold_next);
		let line = &self.lines[self.i];
		let no = line.no;
		let indent = line.indent;

		if line.trimmed == "$" || line.trimmed.starts_with("$ ") {
			return self.shell_run(false, unfold);
		}
		if line.trimmed.starts_with("exec ") {
			return self.exec_block(false);
		}
		// `detach` marks the command it prefixes. Claimed only in front of the
		// two forms that start a process, so it stays an ordinary name
		// everywhere else -- `detach = 5` is still a reassignment.
		if let Some(rest) = line.trimmed.strip_prefix("detach ").map(str::trim_start) {
			if rest == "$" || rest.starts_with("$ ") {
				return self.shell_run(true, true);
			}
			if rest.starts_with("exec ") {
				return self.exec_block(true);
			}
			if rest.starts_with("run ") {
				return err(
					no,
					"`detach` marks a command, and `run` dispatches in-process -- there is no process to detach",
				);
			}
		}

		let Logical { text, at, start, .. } = self.logical();
		let head = text.split_whitespace().next().unwrap_or("");
		let span = Span::new(start, start + text.len(), no);
		// Where a piece of `text` is in the file.
		let pos = |part: &str| offset_in(&text, at, part);

		match head {
			// Claimed only in front of a keyword, so it stays an ordinary name
			// everywhere else -- `parallel = 5` is still a binding.
			"parallel"
				if matches!(
					text[8..].split_whitespace().next(),
					Some(
						"do" | "for"
							| "if" | "while" | "until"
							| "loop" | "match" | "retry"
							| "exec" | "run" | "detach"
							| "$"
					)
				) =>
			{
				let rest = text[8..].trim_start();
				match rest.split_whitespace().next() {
					Some("do") => self.parallel_do(rest, no, span),
					Some("for") => self.parallel_for(rest, pos(rest), no, span),
					Some(other) => err(
						no,
						format!(
							"`parallel` takes `do` or `for`, not `{other}`: `parallel do` makes each statement inside a branch, `parallel for` each iteration"
						),
					),
					None => unreachable!("the guard saw a word"),
				}
			}
			"let" => {
				let rest = text[3..].trim_start();
				let Some(eq) = rest.find('=') else {
					return err(no, "`let` needs `= value`");
				};
				let names = binding_names(rest[..eq].trim(), no)?;
				// Inside a parallel branch, a name bound here is the branch's own.
				if let Some(own) = &mut self.branch {
					own.extend(names.iter().filter(|n| *n != "_").cloned());
				}
				let raw_rhs = rest[eq + 1..].trim();
				let base = pos(raw_rhs);
				let value = match self.capture_rhs(raw_rhs, indent, base, no)? {
					Some(e) => e,
					None => parse_expr(raw_rhs, base, no)?,
				};
				Ok(Statement::Let { names, value, span })
			}
			"do" => {
				if !text[2..].trim().is_empty() {
					return err(
						no,
						"`do` takes nothing; it opens a block so a property has somewhere to go",
					);
				}
				let body = self.block(Some("do"))?;
				self.expect_end(no)?;
				Ok(Statement::Do {
					body,
					parallel: false,
					span,
				})
			}
			"if" => {
				let rest = text[2..].trim();
				let cond = condition(rest, pos(rest), no)?;
				let st = self.if_tail(cond, span)?;
				self.expect_end(no)?;
				Ok(st)
			}
			// `while cond`, `until cond` -- the same body, opposite questions.
			// `until` is the shape a wait loop wants, and the corpus wrote four
			// of them as shell `until … do sleep … done`.
			"while" | "until" => {
				let rest = text[head.len()..].trim();
				if rest.is_empty() {
					return err(no, format!("`{head}` needs a condition, as `{head} n < 10`"));
				}
				let cond = condition(rest, pos(rest), no)?;
				let test = if head == "while" {
					LoopTest::While(cond)
				} else {
					LoopTest::Until(cond)
				};
				let body = self.loop_body(head)?;
				self.expect_end(no)?;
				Ok(Statement::Loop { test, body, span })
			}
			// Takes nothing, and says so: anything after it would read as a
			// condition, which is the one thing a `loop` does not have.
			"loop" => {
				if !text[4..].trim().is_empty() {
					return err(
						no,
						"`loop` takes nothing; it runs until a `break`, and `while` is the form that asks a question",
					);
				}
				let body = self.loop_body("loop")?;
				self.expect_end(no)?;
				Ok(Statement::Loop {
					test: LoopTest::Forever,
					body,
					span,
				})
			}
			"break" | "continue" => {
				if !text[head.len()..].trim().is_empty() {
					return err(no, format!("`{head}` takes nothing after it"));
				}
				if self.loops == 0 {
					return err(
						no,
						format!("`{head}` is only meaningful inside a `for`, `while`, `until` or `loop`"),
					);
				}
				if let Some(fence) = self.fence {
					// Loops opened inside the parallel block, `parallel for` included.
					let opened = self.loops - fence.loops;
					if opened == 0 {
						return err(
							no,
							format!(
								"`{head}` cannot reach a loop outside a `parallel` block: its branches run at once, so there is no order to leave"
							),
						);
					}
					if fence.iterates && opened == 1 && head == "break" {
						return err(
							no,
							"`break` cannot stop a `parallel for`: every iteration is already running -- `continue` ends this one",
						);
					}
				}
				Ok(if head == "break" {
					Statement::Break { span }
				} else {
					Statement::Continue { span }
				})
			}
			// `retry n [every secs]` … `[else …]` `end`
			"retry" => {
				let rest = text[5..].trim();
				let (count, wait) = match rest.split_once(" every ") {
					Some((a, d)) => (a.trim(), Some(d.trim())),
					None => (rest, None),
				};
				if count.is_empty() {
					return err(no, "`retry` needs a number of attempts, as `retry 30 every 1`");
				}
				let attempts = parse_expr(count, pos(count), no)?;
				let delay = match wait {
					Some(d) => Some(parse_expr(d, pos(d), no)?),
					None => None,
				};
				let body = self.block(Some("retry"))?;
				let otherwise = if self.peek_kw() == Some("else") {
					self.i += 1;
					Some(self.block(Some("retry"))?)
				} else {
					None
				};
				self.expect_end(no)?;
				Ok(Statement::Retry {
					attempts,
					delay,
					body,
					otherwise,
					span,
				})
			}
			"for" => {
				let (names, iter) = for_header(&text[3..], pos(&text[3..]), no)?;
				let body = self.for_body(&names)?;
				self.expect_end(no)?;
				Ok(Statement::For {
					names,
					iter,
					body,
					parallel: false,
					span,
				})
			}
			"match" => {
				let rest = text[5..].trim();
				let subject = match shell_capture(rest, pos(rest), no)? {
					Some(e) => e,
					None => parse_expr(rest, pos(rest), no)?,
				};
				let (mut cases, mut default) = (Vec::new(), None);
				loop {
					match self.peek_kw() {
						Some("case") => {
							let l = &self.lines[self.i];
							let label = case_label(l.trimmed, l.no)?;
							let cs = Span::new(l.offset, l.offset + lexer::code(l.trimmed).len(), l.no);
							self.i += 1;
							cases.push(MatchCase {
								label,
								body: self.block(Some("match"))?,
								span: cs,
							});
						}
						Some("default") => {
							self.i += 1;
							default = Some(self.block(Some("match"))?);
						}
						_ => break,
					}
				}
				self.expect_end(no)?;
				Ok(Statement::Match {
					subject,
					cases,
					default,
					span,
				})
			}
			"run" => {
				let rest = text[3..].trim();
				let (target, args) = dispatch_words(split_words(rest), pos(rest), no)?;
				Ok(Statement::Run { target, args, span })
			}
			_ => {
				// `code_of($ cmd)` on its own: run it, ignore how it went.
				if let Some(e) = shell_capture(&text, at, no)? {
					return Ok(Statement::Call { expr: e, span });
				}
				if let Some(eq) = assignment_split(&text) {
					let names = binding_names(text[..eq].trim(), no)?;
					self.check_reassign(&names, no)?;
					let raw_rhs = text[eq + 1..].trim();
					let value = match self.capture_rhs(raw_rhs, indent, pos(raw_rhs), no)? {
						Some(e) => e,
						None => parse_expr(raw_rhs, pos(raw_rhs), no)?,
					};
					return Ok(Statement::Assign { names, value, span });
				}
				let expr = parse_expr(&text, at, no)?;
				check_has_effect(&expr, no)?;
				Ok(Statement::Call { expr, span })
			}
		}
	}

	/// An `if` and every `else`/`else if` after it, down to but **not**
	/// including the `end` that closes the chain.
	///
	/// A chain is one block with one `end`, so only the caller consumes it.
	/// `else if` builds a nested `If` here rather than going back through
	/// `statement`, which would want an `end` of its own -- which means
	/// nothing downstream has to tell a chain from a nest: `else` + a nested
	/// `if` and `else if` parse to the same tree, and the formatter, being
	/// line-oriented, prints back whichever was written.
	fn if_tail(&mut self, cond: Expr, span: Span) -> Result<Statement, ParseError> {
		let then = self.block(Some("if"))?;
		let otherwise = if self.peek_kw() == Some("else") {
			let Logical { text, at, no, .. } = self.logical();
			let rest = text[4..].trim();
			if rest.is_empty() {
				Some(self.block(Some("if"))?)
			} else {
				// Trailing text used to be dropped without a word, so an
				// `else x > 1` ran its block unconditionally.
				let Some(tail) = after_keyword(rest, "if") else {
					return err(
						no,
						format!("`else` takes nothing after it, or `if <condition>`: `{rest}`"),
					);
				};
				if tail.is_empty() {
					return err(no, "`else if` needs a condition");
				}
				let inner = Span::new(offset_in(&text, at, rest), at + text.len(), no);
				let icond = condition(tail, offset_in(&text, at, tail), no)?;
				Some(Block {
					properties: Vec::new(),
					statements: vec![self.if_tail(icond, inner)?],
				})
			}
		} else {
			None
		};
		Ok(Statement::If {
			cond,
			then,
			otherwise,
			span,
		})
	}

	/// One statement directly inside a `parallel do`: a branch of its own.
	fn branch_statement(&mut self) -> Result<Statement, ParseError> {
		self.unfold_next = true;
		let outer = self.branch.replace(BTreeSet::new());
		let st = self.statement();
		self.branch = outer;
		self.unfold_next = false;
		let st = st?;
		if let Statement::Let { names, .. } = &st
			&& names.iter().any(|n| n != "_")
		{
			return err(
				st.span().line,
				"a `let` directly inside `parallel do` binds nothing anyone can read: each statement there is a branch of its own, and what a branch binds ends with it -- bind it before the block, or inside the branch that uses it",
			);
		}
		Ok(st)
	}

	/// `parallel do` and its body. `rest` starts at `do`.
	fn parallel_do(&mut self, rest: &str, no: usize, span: Span) -> Result<Statement, ParseError> {
		if !rest[2..].trim().is_empty() {
			return err(
				no,
				"`parallel do` takes nothing after it; each statement inside is a branch",
			);
		}
		let fence = self.fence.replace(Fence {
			loops: self.loops,
			iterates: false,
		});
		let body = self.block_of(Some("do"), true);
		self.fence = fence;
		let body = body?;
		self.expect_end(no)?;
		Ok(Statement::Do {
			body,
			parallel: true,
			span,
		})
	}

	/// `parallel for` and its body, which is one branch per iteration. `rest`
	/// starts at `for`, at byte `base` of the source.
	fn parallel_for(&mut self, rest: &str, base: usize, no: usize, span: Span) -> Result<Statement, ParseError> {
		let (names, iter) = for_header(&rest[3..], base + 3, no)?;
		// The loop's names are each iteration's own, and nothing an iteration
		// binds reaches the next one or the code after the loop.
		let branch = self
			.branch
			.replace(names.iter().filter(|n| *n != "_").cloned().collect());
		let fence = self.fence.replace(Fence {
			loops: self.loops,
			iterates: true,
		});
		let body = self.loop_body("for");
		self.branch = branch;
		self.fence = fence;
		let body = body?;
		self.expect_end(no)?;
		Ok(Statement::For {
			names,
			iter,
			body,
			parallel: true,
			span,
		})
	}

	/// A plain `for`'s body. Inside a parallel branch its names are the
	/// branch's own for the extent of the loop, and gone again after it: the
	/// runner puts a loop variable back when the loop ends, so a later
	/// assignment to one reaches whatever it named outside.
	fn for_body(&mut self, names: &[String]) -> Result<Block, ParseError> {
		let added: Vec<String> = match &mut self.branch {
			Some(own) => names
				.iter()
				.filter(|n| *n != "_" && own.insert((*n).clone()))
				.cloned()
				.collect(),
			None => Vec::new(),
		};
		let body = self.loop_body("for");
		if let Some(own) = &mut self.branch {
			for n in &added {
				own.remove(n);
			}
		}
		body
	}
